# pingen2-sdk-python

./: .coveragerc  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yml
pingen2sdk/: __init__.py  api.py  error.py  incoming_webhook.py  oauth.py  response.py  webhook_event.py
pingen2sdk/api_resources/: __init__.py  batch_events.py  batches.py  ebills.py  emails.py  file_upload.py  letter_events.py  letters.py  organisations.py  user_associations.py  users.py  webhooks.py
tests/: test_incoming_webhook.py  test_oauth.py  test_webhook.py
tests/api_resources/: test_batch_events.py  test_batches.py  test_ebills.py  test_emails.py  test_file_upload.py  test_letter_events.py  test_letters.py  test_organisations.py  test_user_accociations.py  test_users.py  test_webhooks.py
