[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pingen2sdk"
version = "0.7.0"
authors = [
  { name="Pingen GmbH", email="info@pingen.com" },
]
description = "Official Python Pingen SDK for API V2"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "Operating System :: OS Independent",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: Implementation :: PyPy",
   "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { text = "BSD-3-Clause" }
dependencies = ['requests>=2.31.0','typing-extensions','response']

[project.urls]
"Homepage" = "https://github.com/pingencom/pingen2-sdk-python"
"Bug Tracker" = "https://github.com/pingencom/pingen2-sdk-python/issues"
